[package]
name = "mmap-payload-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
parking_lot = "0.12.3"
log = "0.4.22"
tempfile = "3.13.0"
serde_cbor = "0.11.2"
lz4_flex = { version = "0.11.3", default-features = false }
rand = "0.8.5"
priority-queue = "2.1.1"
bitvec = "1.0.1"

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.0"
rstest = "0.23.0"

[[bench]]
name = "storage_bench"
harness = false

[profile.bench]
debug = true
