[package]
name = "mmap-payload-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
parking_lot = "0.12.3"
log = "0.4.22"
tempfile = "3.13.0"
ciborium = "0.2"
lz4_flex = { version = "0.11.3", default-features = false }
rand = "0.8.5"
bitvec = "1.0.1"
thiserror = "1.0.65"
itertools = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.0"
rstest = "0.23.0"

[[bench]]
name = "random_data_bench"
harness = false

[[bench]]
name = "real_data_bench"
harness = false

[[bench]]
name = "bitmask_bench"
harness = false

[profile.bench]
debug = true
