[package]
name = "rocksdb-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
bustle = "0.5.1"
mmap-value-storage = { path = ".." }
parking_lot = "0.12.3"
rocksdb = "0.22.0"
serde_json = "1.0.132"
tempfile = "3.13.0"

[profile.bench]
debug = true

[[bench]]
name = "bustle"
path = "src/main.rs"
harness = false
